--- a/index.html
+++ b/index.html
@@ -2,11 +2,135 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>PUTEA</title>
+<title>無標題文件</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
-
 <body>
-<p> this is putea</p>
-<p>&nbsp;</p>
+	<h1>我是藝設一甲陳姿蓉</h1>
+	
+	<!--Navbar-->
+	<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">首頁</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+         <a class="nav-link active" aria-current="嘔吐最愛吃的" href="https://baike.baidu.hk/item/%E8%98%8B%E6%9E%9C%E5%85%AC%E5%8F%B8/304038">嘔吐最愛吃的</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href=https://www.i-gamer.net/site/1259.html>你我的童年</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            作業統整
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="https://putea5200.000webhostapp.com/Untitled-1%20(1).html">作業一</a></li>
+            <li><a class="dropdown-item" href="https://putea5200.000webhostapp.com/index1.html">作業二</a></li>
+			  <li><a class="dropdown-item" href="https://putea5200.000webhostapp.com/index1.html">作業三</a></li>
+			  <li><a class="dropdown-item" href="https://putea5200.000webhostapp.com/10017/index.html">作業四</a></li>
+			  <li><a class="dropdown-item" href="https://putea5200.000webhostapp.com/%E5%85%B6%E4%B8%AD/index.html">作業五</a></li>
+			  <li><a class="dropdown-item" href="https://cm1207.000webhostapp.com/1121/CM1121/btns.html">作業六</a></li><li><a class="dropdown-item" href="https://cm1207.000webhostapp.com/1121/CM1121/closebtn.html">作業七</a></li><li><a class="dropdown-item" href="https://cm1207.000webhostapp.com/1121/CM1121/spinners.html">作業八</a></li>
+			  
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">老師新年快樂</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+	
+	
+	    <!--Carousel-->
+	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="" class="d-block w-100" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img src="images/20231016_184243.jpg" class="d-block w-100" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img src="images/20231023_171850.jpg" class="d-block w-100" alt="Third slide">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+	
+<!--Card-->
+	<div class="row">
+		<div class="col-xl-3">
+		<div class="card border-light mb-3" style="max-width: 18rem;">
+  <div class="card-header">0919</div>
+  <div class="card-body">
+    <h5 class="card-title">我的網站</h5>
+    <p class="card-text"></p>
+	<a href="https://cm1207.000webhostapp.com/0919/index.html">Link</a>
+  </div>
+</div>
+			</div>
+	
+		<div class="col-xl-3">
+		<div class="card border-light mb-3" style="max-width: 18rem;">
+  <div class="card-header">0926</div>
+  <div class="card-body">
+    <h5 class="card-title">我的名片</h5>
+    <p class="card-text"></p>
+	<a href="https://cm1207.000webhostapp.com/0926/CM/CM-1.html">Link</a>
+  </div>
+</div>
+			</div>
+	
+		<div class="col-xl-3">
+		<div class="card border-light mb-3" style="max-width: 18rem;">
+  <div class="card-header">1003</div>
+  <div class="card-body">
+    <h5 class="card-title">也是名片</h5>
+    <p class="card-text"></p>
+	<a href="https://cm1207.000webhostapp.com/1003/CM/1003.html">Link</a>
+  </div>
+</div>
+			</div>
+	
+		<div class="col-xl-3">
+		<div class="card border-light mb-3" style="max-width: 18rem;">
+  <div class="card-header">1017</div>
+  <div class="card-body">
+    <h5 class="card-title">作業連結</h5>
+    <p class="card-text"></p>
+	<a href="https://cm1207.000webhostapp.com/1017/index.html">Link</a>
+  </div>
+</div>
+			</div>
+	
+	</div>	
+	
+	<h4>作業總覽在最上方導覽列ㄛ！</h4>
+	
 </body>
 </html>
+
