--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>無標題文件</title>
+<title>putea</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
@@ -62,13 +62,14 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="" class="d-block w-100" alt="First slide">
+      <img src="imange/IMG_6073 (1) (1) (1).jpg" class="d-block w-100" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img src="images/20231016_184243.jpg" class="d-block w-100" alt="Second slide">
+      <img src="imange/IMG_6072 (1) (1) (1).jpg" class="d-block w-100" alt="Second slide">
+		
     </div>
     <div class="carousel-item">
-      <img src="images/20231023_171850.jpg" class="d-block w-100" alt="Third slide">
+      <img src="imange/IMG_6071 (2) (1) (1).jpg" class="d-block w-100" alt="Third slide">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -81,55 +82,55 @@
   </button>
 </div>
 	
+	
+	<h1></h1>
 <!--Card-->
 	<div class="row">
-		<div class="col-xl-3">
-		<div class="card border-light mb-3" style="max-width: 18rem;">
-  <div class="card-header">0919</div>
+	<div class="card" style="width: 18rem;">
+  <img src="imange/IMG_9296.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">我的網站</h5>
-    <p class="card-text"></p>
-	<a href="https://cm1207.000webhostapp.com/0919/index.html">Link</a>
-  </div>
+    <h5 class="card-title">小嘔吐想睡覺</h5>
+    <p class="card-text">睡午覺的小寶寶，想吸一口</p>
+    <a href="https://wuo-wuo.com/infographics/littlesecret/1826-rabbit-secret" class="btn btn-primary">一起睡</a>
 </div>
-			</div>
-	
-		<div class="col-xl-3">
-		<div class="card border-light mb-3" style="max-width: 18rem;">
-  <div class="card-header">0926</div>
+</div>
+	<div class="card" style="width: 18rem;">
+  <img src="imange/IMG_9297.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">我的名片</h5>
-    <p class="card-text"></p>
-	<a href="https://cm1207.000webhostapp.com/0926/CM/CM-1.html">Link</a>
-  </div>
+    <h5 class="card-title">向右看齊</h5>
+    <p class="card-text">因為我在右邊，嘔吐在偷看我</p>
+    <a href="https://www.i-gamer.net/site/15150.html" class="btn btn-primary">嘔吐小寶貝</a>
 </div>
-			</div>
-	
-		<div class="col-xl-3">
-		<div class="card border-light mb-3" style="max-width: 18rem;">
-  <div class="card-header">1003</div>
+</div>
+	<div class="card" style="width: 18rem;">
+  <img src="imange/IMG_9390.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">也是名片</h5>
-    <p class="card-text"></p>
-	<a href="https://cm1207.000webhostapp.com/1003/CM/1003.html">Link</a>
-  </div>
+    <h5 class="card-title">我跟嘔吐寶寶</h5>
+    <p class="card-text">跟嘔吐小寶的親密自拍照，羨慕</p>
+    <a href="https://baike.baidu.com/item/%E8%87%AA%E6%8B%8D/2517535#3
+" class="btn btn-primary">一起學自拍</a>
 </div>
-			</div>
-	
-		<div class="col-xl-3">
-		<div class="card border-light mb-3" style="max-width: 18rem;">
-  <div class="card-header">1017</div>
+</div>
+		<div class="card" style="width: 18rem;">
+  <img src="imange/IMG_9391.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">作業連結</h5>
-    <p class="card-text"></p>
-	<a href="https://cm1207.000webhostapp.com/1017/index.html">Link</a>
-  </div>
+    <h5 class="card-title">嘔吐的春天</h5>
+    <p class="card-text">他是醜黑米，我不同意這門親事</p>
+    <a href="https://www.mababy.com/knowledge-detail?id=13539
+" class="btn btn-primary">解決婆媳問題</a>
 </div>
-			</div>
+</div>
+	<div class="card" style="width: 18rem;">
+  <img src="imange/IMG_9389 (1).jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">鼻孔看人</h5>
+    <p class="card-text">傲嬌嘔吐，貴婦都用鼻孔看人</p>
+    <a href="https://zhidao.baidu.com/index/?word=%E7%94%A8%E9%BC%BB%E5%AD%94%E7%9C%8B%E4%BA%BA%E4%BB%80%E4%B9%88%E6%84%8F%E6%80%9D?&from=qb&samplow_val=-1" class="btn btn-primary">鼻孔的深奧</a>
+</div>
+</div>
+	</div>
 	
-	</div>	
-	
-	<h4>作業總覽在最上方導覽列ㄛ！</h4>
+
 	
 </body>
 </html>
