--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="imange/IMG_6073 (1) (1) (1).jpg" class="d-block w-100" alt="First slide">
+      <img src="file:///D|/PUTEA/putea877.ginhub.io/imange/IMG_6073 (1) (1) (1).jpg" class="d-block w-100" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img src="imange/IMG_6072 (1) (1) (1).jpg" class="d-block w-100" alt="Second slide">
+      <img src="file:///D|/PUTEA/putea877.ginhub.io/imange/IMG_6072 (1) (1) (1).jpg" class="d-block w-100" alt="Second slide">
 		
     </div>
     <div class="carousel-item">
-      <img src="imange/IMG_6071 (2) (1) (1).jpg" class="d-block w-100" alt="Third slide">
+      <img src="file:///D|/PUTEA/putea877.ginhub.io/imange/IMG_6071 (2) (1) (1).jpg" class="d-block w-100" alt="Third slide">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -87,7 +87,7 @@
 <!--Card-->
 	<div class="row">
 	<div class="card" style="width: 18rem;">
-  <img src="imange/IMG_9296.jpg" class="card-img-top" alt="...">
+  <img src="file:///D|/PUTEA/putea877.ginhub.io/imange/IMG_9296.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">小嘔吐想睡覺</h5>
     <p class="card-text">睡午覺的小寶寶，想吸一口</p>
@@ -95,7 +95,7 @@
 </div>
 </div>
 	<div class="card" style="width: 18rem;">
-  <img src="imange/IMG_9297.jpg" class="card-img-top" alt="...">
+  <img src="file:///D|/PUTEA/putea877.ginhub.io/imange/IMG_9297.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">向右看齊</h5>
     <p class="card-text">因為我在右邊，嘔吐在偷看我</p>
@@ -103,7 +103,7 @@
 </div>
 </div>
 	<div class="card" style="width: 18rem;">
-  <img src="imange/IMG_9390.jpg" class="card-img-top" alt="...">
+  <img src="file:///D|/PUTEA/putea877.ginhub.io/imange/IMG_9390.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">我跟嘔吐寶寶</h5>
     <p class="card-text">跟嘔吐小寶的親密自拍照，羨慕</p>
@@ -112,7 +112,7 @@
 </div>
 </div>
 		<div class="card" style="width: 18rem;">
-  <img src="imange/IMG_9391.jpg" class="card-img-top" alt="...">
+  <img src="file:///D|/PUTEA/putea877.ginhub.io/imange/IMG_9391.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">嘔吐的春天</h5>
     <p class="card-text">他是醜黑米，我不同意這門親事</p>
@@ -121,7 +121,7 @@
 </div>
 </div>
 	<div class="card" style="width: 18rem;">
-  <img src="imange/IMG_9389 (1).jpg" class="card-img-top" alt="...">
+  <img src="file:///D|/PUTEA/putea877.ginhub.io/imange/IMG_9389 (1).jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">鼻孔看人</h5>
     <p class="card-text">傲嬌嘔吐，貴婦都用鼻孔看人</p>
